--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==2.1.1
 billiard==3.5.0.2
 celery==4.0.0
+dj-database-url==0.4.1
 Django==1.9.8
 django-filter==1.0.0
 djangorestframework==3.5.3
